test-fixtures/machine-dsl-tests/tests/compile_fail/composition_protocol_rejects_raw_effect_shape.rs
use meerkat_mob::generated::protocol_flow_loop_until_evaluation;

fn main() {
    let _ = protocol_flow_loop_until_evaluation::accept_evaluate_until_condition("not an effect");
}
