test-fixtures/machine-dsl-tests/tests/compile_fail/composition_protocol_rejects_raw_effect_shape.stderr
error[E0603]: module `generated` is private
 --> tests/compile_fail/composition_protocol_rejects_raw_effect_shape.rs:1:18
  |
1 | use meerkat_mob::generated::protocol_flow_loop_until_evaluation;
  |                  ^^^^^^^^^  ----------------------------------- module `protocol_flow_loop_until_evaluation` is not publicly re-exported
  |                  |
  |                  private module
  |
note: the module `generated` is defined here
 --> $WORKSPACE/meerkat-mob/src/lib.rs
  |
  | mod generated;
  | ^^^^^^^^^^^^^
